# spider_bases_datos_documentales

./: README.md
CISH/: pruebas.py
curso_bash_scripting/: 1_utillityPostgres.sh  3_tipoOperadores.sh  4_argumentos.sh  arguments.sh  case.sh  compare_string.sh  condicionals.sh  continue_brake.sh  loop.sh  ls_error_file.txt  resultado.txt  resultados_ejecucion.txt  stdin.sh  sterr_stdout.sh
curso_docker/images/: Dockerfile
documentaciones/: montar_un_docker.md
notas/: apuntes.sh  docker.md  expo_politica.md  notas_docker.md  sql.md
scrapy/: notas.md
tin_spider/: expresiones_xpath.txt  pyproject.toml
tin_spider/tin_spider/: scrapy.cfg
tin_spider/tin_spider/tin_spider/: articulos_dialnet.json  articulos_scholar.json  articulos_scielo_2.json  items.py  middlewares.py  pipelines.py  scholarly.py  settings.py
tin_spider/tin_spider/tin_spider/spiders/: articulos_scholar.csv  articulos_scholar.json  articulos_scielo_2.json  dialnet.py  radalyc_2.py  redalyc_scrapy.py  scholar_scrapy.py  scielo_scrapy.py
trasreo/CISH/: requeriments.txt
trasreo/Diario/: .~lock.dia_1.docx#  dia_1.docx
trasreo/OneCluster/: PENDIENTES SISTEMA EQUIPOS 13 DE MARZO DE 2024(1).docx  Requerimientos Técnicos para el Módulo 'Sacrificio' en Tryton.docx  Requerimientos Técnicos para el Módulo 'Sacrificio' en Tryton.odt
trasreo/busqueda_bases_datos/: articulos_scholar.xlsx  (+1 more)
universidad/: Social Network Profile Cristian Montoya Garces.docx  ensayo_rural.odt  expo_politica.odt  introduccion_politica.odt  para la negrita.odt  tarea_cristian_cish.docx  transcipciones.odt
(+45 files in other folders)
