[tool.poetry]
name = "tin-spider"
version = "0.1.0"
description = ""
authors = ["Mongar28 <cristian.montoya.g@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.11.1"
scholarly = "^1.7.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
